dashboard sidebar added

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./dashboard.css" />
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <aside>
+        <h1>
+          <a href="./dashboard.html"
+            ><img src="./images/chart.png" alt="chart-icon" /> Simple
+            Analytics</a
+          >
+        </h1>
+        <nav>
+            <ul >
+                <li>
+                    <div class="nav-wrapper">
+                        <a href="#"><img src="./images/dashboard.png" alt="dashboard-icon"/> dashboard</a>
+                        <a href="./settings.html"><img src="./images/settings.png" alt="settings-icon"/> setings</a>
+                    </div>
+                </li>
+                <li class="nav-wrapper"><a href="./index.html"><img src="./images/logout.png" alt="logout-icon"/> logout</a></li>
+            </ul>
+        </nav>
+      </aside>
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
