logo link changed to index html

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
     <main>
       <aside>
         <h1>
-          <a href="./dashboard.html"
+          <a href="./index.html"
             ><img src="./images/chart.png" alt="chart-icon" /> Simple
             Analytics</a
           >
