--- a/dashboard.html
+++ b/dashboard.html
@@ -23,18 +23,75 @@
           >
         </h1>
         <nav>
-            <ul >
-                <li>
-                    <div class="nav-wrapper">
-                        <a href="#"><img src="./images/dashboard.png" alt="dashboard-icon"/> dashboard</a>
-                        <a href="./settings.html"><img src="./images/settings.png" alt="settings-icon"/> setings</a>
-                    </div>
-                </li>
-                <li class="nav-wrapper"><a href="./index.html"><img src="./images/logout.png" alt="logout-icon"/> logout</a></li>
-            </ul>
+          <ul>
+            <li>
+              <div class="nav-wrapper">
+                <a href="#"
+                  ><img src="./images/dashboard.png" alt="dashboard-icon" />
+                  dashboard</a
+                >
+                <a href="./settings.html"
+                  ><img src="./images/settings.png" alt="settings-icon" />
+                  setings</a
+                >
+              </div>
+            </li>
+            <li class="nav-wrapper">
+              <a href="./index.html"
+                ><img src="./images/logout.png" alt="logout-icon" /> logout</a
+              >
+            </li>
+          </ul>
         </nav>
       </aside>
-      <section></section>
+      <section>
+        <h2>DASHBOARD</h2>
+        <h3>Views</h3>
+        <div class="box-container">
+          <div class="box">
+            <h2>2500</h2>
+            <p>/day</p>
+          </div>
+          <div class="box">
+            <h2>9000</h2>
+            <p>/month</p>
+          </div>
+          <div class="box">
+            <h2>23000</h2>
+            <p>/weel</p>
+          </div>
+        </div>
+        <h3>Pages</h3>
+        <div class="info-wrapper">
+          <div class="info">
+            <p>/</p>
+            <p>500</p>
+          </div>
+          <div class="info">
+            <p>/sample-post</p>
+            <p>20</p>
+          </div>
+          <div class="info">
+            <p>/sample-post2</p>
+            <p>50</p>
+          </div>
+          <div class="info">
+            <p>/about</p>
+            <p>100</p>
+          </div>
+        </div>
+        <h3>Country/State</h3>
+        <div class="info-wrapper " id="second-info-wrapper">
+          <div class="info">
+            <p>India/AndhraPradesh</p>
+            <p>500</p>
+          </div>
+          <div class="info">
+            <p>India/Tamilnadu</p>
+            <p>20</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
