styles imported from dashboard.css to styles .css

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./dashboard.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header></header>
@@ -44,7 +44,7 @@
           </ul>
         </nav>
       </aside>
-      <section>
+      <section id="dashboard-section">
         <h2>DASHBOARD</h2>
         <h3>Views</h3>
         <div class="box-container">
