added base structure
- added empty html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
-    <title>Home</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simple Analytics</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
-    <a href="./dashboard.html">dashboard</a>
+    <header></header>
+    <main>
+        <aside>
+            <h1>
+                <a href="./index.html"><img src="./images/chart.png" alt="chart-icon" /> Simple
+                    Analytics</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <div>
+
+                        </div>
+                    </li>
+                    <li>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+
+    </main>
+    <footer></footer>
 </body>
+
 </html>
