--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header></header>
     <main>
-        <aside>
+        <aside id="index-aside">
             <h1>
                 <a href="./index.html"><img src="./images/chart.png" alt="chart-icon" /> Simple
                     Analytics</a>
@@ -22,11 +22,18 @@
             <nav>
                 <ul>
                     <li>
-                        <div>
-
+                        <div class="buttons-nav">
+                            <a href="dashboard.html" alt="signup">
+                                <button>
+                                    signup
+                                </button>
+                            </a>
+                            <a href="settings.html" alt="login">
+                                <button>
+                                    login
+                                </button>
+                            </a>
                         </div>
-                    </li>
-                    <li>
                     </li>
                 </ul>
             </nav>
