added final styles
- added index content
- added css styles

--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
                 </ul>
             </nav>
         </aside>
+        <section>
+            <div class="index-container">
+                <div class="align-right">
+                    <h2>
+                        bare minimum analytics for
+                        privacy consious websites
+                    </h2>
+                </div>
+                <div class="align-center">
+                    <a href="dashboard.html" alt="dashboard">
+                        <img src="images/presentation.png" alt="presentation">
+                    </a>
+                </div>
+                <div class="align-left">
+                    <h2>
+                        collect only the least amount of data needed
+                    </h2>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer></footer>
