Fixed Reviewed Issues
- Changed from Button to A
- Fixed List Structure

--- a/index.html
+++ b/index.html
@@ -21,19 +21,15 @@
             </h1>
             <nav>
                 <ul>
-                    <li>
-                        <div class="buttons-nav">
-                            <a href="dashboard.html" alt="signup">
-                                <button>
-                                    signup
-                                </button>
-                            </a>
-                            <a href="settings.html" alt="login">
-                                <button>
-                                    login
-                                </button>
-                            </a>
-                        </div>
+                    <li class="buttons-nav">
+                        <a href="dashboard.html" alt="signup">
+                            signup
+                        </a>
+                    </li>
+                    <li class="buttons-nav">
+                        <a href="settings.html" alt="login">
+                            login
+                        </a>
                     </li>
                 </ul>
             </nav>
