settings.html & everything connected to in removed

--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
                   ><img src="./images/dashboard.png" alt="dashboard-icon" />
                   dashboard</a
                 >
-                <a href="./settings.html"
+                <a href="#"
                   ><img src="./images/settings.png" alt="settings-icon" />
                   setings</a
                 >
