--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="buttons-nav">
-                        <a href="settings.html" alt="login">
+                        <a href="#" alt="login">
                             login
                         </a>
                     </li>
